<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_general">Aggregio</string>
    <string name="account_name">aggregio</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="title_activity_publisher">Manage Sources</string>
    <string name="nav_read_news">Read News</string>
    <string name="nav_read_bookmarks">Bookmarks</string>
    <string name="nav_manage_sources">Manage Sources</string>
    <string name="nav_app_group_title">Application</string>
    <string name="nav_help">Help and feedback</string>
    <string name="view_on_web">Open in Browser</string>
    <string name="also_read">ALSO READ</string>
    <string name="pref_title_fetch_images">Fetch Images via Wi-Fi only</string>
    <string name="pref_description_fetch_images">To reduce carrier data charges, don\'t fetch images over mobile networks</string>
    <string name="pref_title_open_source_licenses">Open Source Licenses</string>
    <string name="pref_description_open_source_licenses">Legal information about licenses</string>
    <string name="pref_title_usage_policy">Usage Policy</string>
    <string name="pref_description_usage_policy">Aggregio is for personal and non-commercial use only.</string>
    <string name="pref_title_article_text_size">Article text size</string>
    <string name="title_activity_bookmarks">My Bookmarks</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="without_internet_long">Read your favourite stories even when you\'re offline</string>
    <string name="without_internet_short">Even without an internet connection</string>
    <string name="all_in_one_short">All in one</string>
    <string name="all_in_one_long">Discover and read all the news you care about in a single app</string>
    <string name="bookmark_short">Bookmark and Share</string>
    <string name="bookmark_long">Bookmark stories you don\'t have time to read for later and share with your friends on social media.</string>
    <string name="title_activity_publisher_articles">PublisherArticlesActivity</string>
    <string name="title_activity_select_publishers">SelectPublishersActivity</string>
    <string name="pref_key_article_text_size">article_text_size</string>
    <string name="pref_key_refresh_interval">refresh_interval</string>
    <string name="action_refresh">Refresh</string>
    <string name="pref_key_refresh_on_start">refresh_on_start</string>
    <string name="pref_title_refresh_on_start">Refresh On Start</string>
    <string name="pref_description_refresh_on_start">Refresh articles everytime the app is opened</string>
    <string name="pref_key_delete_stale_articles">delete_stale_articles</string>
    <string name="pref_title_delete_stale_articles">Delete stale articles</string>
    <string name="publisher_grid_header_title">Tap to follow or unfollow your favourite news sites and blogs.</string>
    <string name="key_images_on_wifi_only">download_images_on_wifi_only</string>
    <string name="title_activity_article_detail">Article Detail</string>

</resources>
