<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <CheckBoxPreference
        android:key="@string/pref_key_refresh_on_start"
        android:title="@string/pref_title_refresh_on_start"
        android:summary="@string/pref_description_refresh_on_start"
        android:defaultValue="true" />

    <ListPreference
        android:key="@string/pref_key_refresh_interval"
        android:title="@string/pref_title_refresh_interval"
        android:entries="@array/pref_sync_refresh_intervals"
        android:entryValues="@array/refresh_interval_values"
        android:defaultValue="720"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="download_images_checkbox"
        android:title="@string/pref_title_fetch_images"
        android:summary="@string/pref_description_fetch_images"
        android:defaultValue="false" />



</PreferenceScreen>
