<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/nav_main">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_read_news"
            android:title="@string/nav_read_news" />
        <item
            android:id="@+id/nav_manage_sources"
            android:icon="@drawable/ic_my_library_books_black_24dp"
            android:title="@string/nav_manage_sources" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/nav_read_bookmarks" />
    </group>
    <group android:id="@+id/nav_application">
            <item
                android:id="@+id/nav_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/nav_help" />
    </group>

</menu>
