<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.aggreg.app.ui.ArticleDetailActivity">
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_open_in_browser" android:title="@string/action_open_in_browser"
        android:icon="@drawable/ic_open_in_browser_grey600_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
